--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,21 +35,21 @@
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
+   
   </ul>
 
-<div class="container-fluid-carousel">
+<div class="row">
+<div class="col-sm-12">
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/images/la.jpg" alt="Los Angeles">
+      <img src="/images/1.jpg" alt="Los Angeles">
     </div>
     <div class="carousel-item">
-      <img src="/images/chicago.jpg" alt="Chicago">
+      <img src="/images/2.jpg" alt="Chicago">
     </div>
-    <div class="carousel-item">
-      <img src="/images/ny.jpg" alt="New York">
-    </div>
+   
+  </div>
   </div>
 </div>
   <!-- Left and right controls -->
