--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,7 @@
 
 	<div class="main container-fluid">
 	
+	<div class="contenido">
 	<div id="demo" class="carousel slide" data-ride="carousel">
 
   <!-- Indicators -->
@@ -61,7 +62,7 @@
   </a>
 
 </div>
-	
+	</div>
 	
 	
 	
