Se agregaron secciones en el menu

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -142,8 +142,11 @@
                     </li>
                     
                  -->
-                	<li class="nav-item"><a class="nav-link" th:href="@{/cursos/listado}">Cursos</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/auditoria/declaracion-patrimonial}">Declaración Patrimonial</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/auditoria/entrega-recepcion}">Entrega Recepción</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/auditoria/control-interno}">Control Interno</a></li>
                     
+                	<li class="nav-item"><a class="nav-link" th:href="@{/cursos/listado}">Cursos</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/comentarios/formulario}">Comentarios</a></li>
                      
                     
