--- a/src/main/resources/templates/auditoria/departamentos.html
+++ b/src/main/resources/templates/auditoria/departamentos.html
@@ -22,15 +22,19 @@
         
         	<h1 class="titulo-seccion bold text-center">Departamentos de Auditoría Interna</h1>
         	<div class="contenido">
-				<p>Auditoría Interna es la dependencia encargada de supervisar el manejo de fondos y valores, procedimientos y operaciones contables de la Universidad, así como de llevar a cabo, en colaboración con la Coordinación de Planeación y Desarrollo Institucional, la revisión del cumplimiento de los procedimientos administrativos y sus estándares de calidad. Su titular será designado por el Patronato.</p>
-				<p>El Auditor Interno titular a la fecha es el <span class="bold">C.P.C. y Mtro. José María Armendáriz Palomares</span></p>
-				<p>Para el cumplimiento de sus funciones el Auditor Interno se apoya con un Departamento de Auditoría en cada uno de los tres campus universitarios.</p>
+						<p>Auditoría Interna es la dependencia encargada de supervisar el manejo de fondos y valores, procedimientos y operaciones contables de la Universidad, así como de llevar a cabo, en colaboración con la Coordinación de Planeación y Desarrollo Institucional, la revisión del cumplimiento de los procedimientos administrativos y sus estándares de calidad. Su titular será designado por el Patronato.</p>
+				<p>El Auditor Interno titular a la fecha es el <span class="bold">C.P.C. y Mtro. José María Armendáriz Palomares</span>, para quejas y comentarios, favor de dirigir correo electrónico a <a href="mailto:jarmendariz@uabc.edu.mx" class="resaltado bold">jarmendariz@uabc.edu.mx</a> anexando la evidencia que considere conveniente.</p>
+				<p>Para el cumplimiento de sus funciones el Auditor Interno se apoya con dos Departamentos de Auditoría en Rectoría y uno en cada uno de los campus Tijuana y Ensenada.</p>
 				
-				<p class="bold">Departamento de Auditoría Interna Campus Mexicali</p>
-				<p>Su titular es la <span class="bold">C.P. Silvia Ambríz Ramos</span>, quien es responsable de las revisiones del Campus Mexicali de la UABC, y se apoya con 15 auditores para realizar su función.</p>
+				<p class="bold">Departamento de Auditoría Interna Mexicali</p>
+				<p>Su titular es la <span class="bold">Mtra. Claudia Mora Lara</span>, quien es responsable de las revisiones integrales y por área de Mexicali y se apoya con 10 auditores para realizar su función.</p>
 	
+				<p class="bold">Departamento de Seguimiento y Auditorías Especiales</p>
+				<p>Su titular es el <span class="bold">M.F.C. José Ortíz Bautista</span>, quien es el responsable de realizar las revisiones por área y especiales, así como de dar seguimiento a las auditorías practicadas a la UABC por parte de Organismos Externos.</p>
+				
+				
 				<p class="bold">Departamento de Auditoría Interna Campus Tijuana</p>
-				<p>Actualmente su titular es la <span class="bold">LAE Yandira C. Martínez García</span>, quien es responsable de las revisiones al Campus Tijuana de la UABC, y se apoya de 6 auditores para realizar sus funciones.</p>
+				<p>Actualmente su titular es el <span class="bold">C.P. Jorge Luis Casas Robles</span>, quien es responsable de las revisiones al Campus Tijuana de la UABC, y se apoya de 5 auditores para realizar sus funciones.</p>
 	
 				<p class="bold">Departamento de Auditoría Interna Campus Ensenada</p>
 				<p>Actualmente su titular es la <span class="bold">C.P. Martha Atondo Valenzuela</span>, quien es responsable de las revisiones al Campus Ensenada de la UABC, y se apoya de 4 auditores para realizar sus funciones.</p>
