--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -43,105 +43,7 @@
   
                         </ul>
                     </li>
-                    <!--  
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catálogo de servicios</a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li class="dropdown-item"><a href="catalogo-de-servicios">Cátalogo de servicio</a></li>
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item" tabindex="-1" href="#">A Empleados</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-item"><a tabindex="-1" href="pensiones-y-jubilaciones">Pensiones y jubilaciones</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-item"><a href="servicios-a-alumnos">A Alumnos</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Transparencia</a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li class="dropdown-item"><a href="ley-estatal">Ley Estatal de Transparencia</a></li>
-                            <li class="dropdown-item"><a href="declaracion-patrimonial">Declaración Patrimonial</a></li>
-                            <li class="dropdown-item"><a href="acuerdos-patronato">Acuerdos del Patronato</a></li>
-                            <li class="dropdown-item"><a href="remates">Remates</a></li>
-                            <li class="dropdown-item"><a href="fondo-pensiones">Fondo de pensiones</a></li>
-                            <li class="dropdown-item"><a href="auditoria-informes">Informes de Auditorías</a></li>
-                            <li class="dropdown-item"><a href="acta-entrega-recepcion">Acta de Entrega-Recepción</a></li>
-                            <li class="dropdown-item"><a href="estados-financieros">Estados Financieros UABC</a></li>
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item" tabindex="-1" href="#">Cuenta Pública</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-item"><a tabindex="-1" href="cuenta-publica-2014">2014</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="cuenta-publica-2015">2015</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="cuenta-publica-2016">2016</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="cuenta-publica-2017">2017</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="cuenta-publica-2018">2018</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="cuenta-publica-2019">2019</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="cuenta-publica-2020">2020</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-item"><a href="presupuesto-anual">Presupuesto UABC</a></li>
-                            <li class="dropdown-item"><a href="contratos-y-convenios">Contratos y convenios</a></li>
-                            <li class="dropdown-submenu">
-                            	 <a class="dropdown-item" tabindex="-1" href="#">Informes PROFOCIES / PFCE / PROFEXCE</a>
-                            	<ul class="dropdown-menu">
-                            		<li class="dropdown-item"><a tabindex="-1" href="profocie">PROFOCIE</a></li>
-                            		<li class="dropdown-item"><a tabindex="-1" href="pfce">PFCE</a></li>
-                            		<li class="dropdown-item"><a tabindex="-1" href="profexce">PROFEXCE</a></li>
-                            	</ul>
-                            </li>
-                            <li class="dropdown-item"><a href="presupuesto-ciudadano">Presupuesto Ciudadano</a></li>
-                            <li class="dropdown-item"><a href="http://www.uabc.mx/planeacion/fondos_extraordinarios.htm" target="_blank">Fondos Extraordinarios (Informe)</a></li>
-                        </ul>
-                    </li>
-                    
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dependencias</a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item" tabindex="-1" href="#">Tesorería</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-item"><a tabindex="-1" href="tesoreria-facultades">Facultades</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="tesoreria-departamentos">Departamentos</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item" tabindex="-1" href="#">Auditoría Interna</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-item"><a tabindex="-1" href="auditoria-interna-facultades">Facultades</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="auditoria-interna-departamentos">Departamentos</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="auditoria-interna-organigrama">Organigrama</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item" tabindex="-1" href="#">Contaduría</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-item"><a tabindex="-1" href="contaduria-facultades">Facultades</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="contaduria-departamentos">Departamentos</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="contaduria-organigrama">Organigrama</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item" tabindex="-1" href="#">Unidad de Presupuesto y Finanzas</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-item"><a tabindex="-1" href="unidad-presupuesto-y-finanzas-facultades">Facultades</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="unidad-presupuesto-y-finanzas-departamentos">Departamentos</a></li>
-                                    <li class="dropdown-item"><a tabindex="-1" href="unidad-presupuesto-y-finanzas-organigrama">Organigrama</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-item"><a href="entidades-asociadas">Entidades Asociadas de la Universidad</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Control patrimonial</a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li class="dropdown-item"><a href="sistema-de-inventarios-de-activos-fijos">Sistema de inventarios de activos fijos</a></li>
-                            <li class="dropdown-item"><a href="sucop">Sistema Universitario de Control Patrimonial (SUCOP)</a></li>
-                            <li class="dropdown-item"><a href="reglas-de-operacion-pfce">Reglas de Operación PFCE "Etiquetas"</a></li>
-                        </ul>
-                    </li>
-                    
-                 -->
+              
                     <li class="nav-item"><a class="nav-link" th:href="@{/auditoria/declaracion-patrimonial}">Declaración Patrimonial</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/auditoria/entrega-recepcion}">Entrega Recepción</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/auditoria/control-interno}">Control Interno</a></li>
@@ -149,6 +51,9 @@
                 	<li class="nav-item"><a class="nav-link" th:href="@{/cursos/listado}">Cursos</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/comentarios/formulario}">Comentarios</a></li>
                      
+                     <ul class="navbar-nav">
+                    <li class="nav-item "><a class="nav-link" th:href="@{/comentarios/formulario}"><img th:src="@{/images/iniciar-sesion.png}" alt="HTML tutorial" style="width:20px;height:20px;"></a></li>
+                   </ul>
                     
                     
 	<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"   th:src="@{https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit}"></script> 
