--- a/src/main/resources/templates/cursos/detalleCurso.html
+++ b/src/main/resources/templates/cursos/detalleCurso.html
@@ -36,8 +36,7 @@
                 <h6 class="card-title"><strong>Presentador: </strong> <span th:text="${curso.presentador}"></span></h6>    
                 <span th:if="${curso.modalidad==1}"> 
                 <h6 class="card-title"><strong>Modalidad: </strong> <span>Online</span></h6> 
-                         <h6 class="card-title"><strong>Plataforma: </strong><span th:text="${curso.plataforma}"></span></h6>
-                <h6 class="card-title"><strong>Liga: </strong><a class="link-gris" th:href="@{curso.liga}"><p th:text="${curso.liga}"></p></a></h6>    
+                         <h6 class="card-title"><strong>Plataforma: </strong><span th:text="${curso.plataforma}"></span></h6>    
               	</span>
               	<span th:unless="${curso.modalidad==1}"> 
                 <h6 class="card-title"><strong>Modalidad: </strong> <span>Presencial</span></h6>  
@@ -58,7 +57,7 @@
                 </div>   
                 
                 <span th:if="${curso.estatus==1}">
-                <a class="btn btn-success float-right" th:href="@{/cursos/registro/{id} (id=${curso.id}) }" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Registrarse</a>                            
+                <a class="btn btn-success float-right" th:href="@{/cursos/createAsistente/{id} (id=${curso.id}) }" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Registrarse</a>                            
               	</span>
               	 <span th:unless="${curso.estatus==1}">
               	<a class="btn btn-secondary float-right" href="#" role="button" title=""><i class="fas fa-file" aria-hidden="true"></i> Descargar presentación</a>  
