se agrego relacion de curso al registro de asistentes, se hicieron vistas para la administracion de los modulos y se creo el modulo de listado de cursos y formulario de agregar

--- a/src/main/resources/templates/cursos/detalleCurso.html
+++ b/src/main/resources/templates/cursos/detalleCurso.html
@@ -52,7 +52,7 @@
                 <div class="card bg-light mb-3" >
                   <div class="card-body">
                     <h5 class="card-title">Detalles del curso</h5>
-                <p th:text ="${curso.descripcion}"class="card-text"></p>
+                <p th:text ="${curso.detalle}"class="card-text"></p>
                   </div>
                 </div>   
                 
