se termino propuesta de diseño de la pagina de declaracion patrimonial

--- a/src/main/resources/static/css/template.css
+++ b/src/main/resources/static/css/template.css
@@ -802,3 +802,12 @@ margin-right:15px;
 	padding-top:20px;
 }
 
+.texto-contenido-derecha{
+	text-align:right;
+	
+}
+
+.texto-contenido{
+	text-align:justify;
+}
+
