se terminaron diseños de declaracion y entrega recepcion

--- a/src/main/resources/templates/admin/formCurso.html
+++ b/src/main/resources/templates/admin/formCurso.html
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
   <link rel="stylesheet" th:href="@{//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css}">
-  <link rel="stylesheet" th:href="@{/resources/demos/style.css}">
+ <!--   <link rel="stylesheet" th:href="@{//resources/demos/style.css}">-->
   
 <link rel="shortcut icon" href="..static/images/escudo-uabc-favicon.png"
 	type="image/x-icon" th:href="@{/images/escudo-uabc-favicon.png}">
