--- a/src/main/resources/templates/auditoria/declaracion-patrimonial2.html
+++ b/src/main/resources/templates/auditoria/declaracion-patrimonial2.html
@@ -50,7 +50,7 @@
 
 				<div class="card">
 					<h5 class="card-header">
-						<strong>Título</strong>
+						<strong>Plazos</strong>
 					</h5>
 					<div class="card-body">
 						<p class="texto-contenido">Los plazos para la presentación de
