--- a/src/main/resources/templates/cursos/vistaCursos.html
+++ b/src/main/resources/templates/cursos/vistaCursos.html
@@ -49,7 +49,7 @@
 				<div class="col-md-9">
 					<h5 class="bold" th:text="${curso.nombre}"></h5>
 					<h6 class="card-title">
-						<strong>Fecha </strong> <span th:text="${curso.fecha}"></span>
+						<strong>Fecha </strong> <span th:text="${#dates.format(curso.fecha,'dd-MM-yyyy HH:mm')}"></span>
 					</h6>
 					<h6 class="card-title">
 						<strong>Presentador: </strong> <span
